# VibeClaw

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  plan.md  setup.sh  start.sh
.claude/rules/: Anti-Speculation & Pro-Inquiry.instructions.md  Architectural Decision Control & Discussion First.md  Critical Thinking & Design Challenge.md  Idiomatic Ownership & Zero-Cost Abstractions.md  Minimalist Documentation & Clean Code.md
.github/: copilot-instructions.md
.github/agents/: planner.agent.md
constitution/: benchmarks.json  invariants.json
crates/admin/: Cargo.toml
crates/admin/src/: client.rs  main.rs
crates/boot/: Cargo.toml  build.rs
crates/boot/src/: capability.rs  constitution.rs  ipc.rs  lease.rs  main.rs  memory_writer.rs  microkernel.rs  protocol.rs  resource.rs  runlevel.rs  state.rs  version.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  stop.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/scenarios/: self-evolution.json
crates/integration-tests/src/: main.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs  log_err.rs  messages.rs  wire.rs
crates/peripheral/: Cargo.toml
crates/peripheral/src/: agent.rs  deepseek.rs  ipc_client.rs  lib.rs  main.rs  memory.rs  migration.rs  scripted_llm.rs  source.rs  tools.rs  web.rs
crates/peripheral/src/static/: index.html
crates/services/admin-web/: Cargo.toml
crates/services/admin-web/src/: ipc.rs  main.rs  web.rs
crates/services/admin-web/src/static/: index.html
crates/services/audit/: Cargo.toml
crates/services/audit/src/: main.rs
crates/services/compiler/: Cargo.toml
crates/services/compiler/src/: main.rs
crates/services/judge/: Cargo.toml
crates/services/judge/src/: benchmark.rs  due_process.rs  invariant.rs  main.rs
protocol/: messages.json
