[workspace]
resolver = "3"
members = [
    "crates/ipc",
    "crates/boot",
    "crates/services/compiler",
    "crates/services/judge",
    "crates/services/audit",
    "crates/peripheral",
    "crates/admin",
    "crates/integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
reloopy-ipc = { path = "crates/ipc" }
passfd = "0.1.6"
libc = "0.2"
