[workspace]
resolver = "3"
members = [
    "crates/ipc",
    "crates/boot",
    "crates/services/compiler",
    "crates/services/judge",
    "crates/services/audit",
    "crates/services/admin-web",
    "crates/peripheral",
    "crates/admin",
    "crates/cli",
    "crates/integration-tests",
]

[workspace.lints.clippy]
# Warn when a `#[must_use]` result is discarded with `let _ =`.
# This catches silently-ignored errors such as `let _ = sender.send(...).await`.
let_underscore_must_use = "warn"
# Warn when a future is assigned to `_` without being awaited at all.
let_underscore_future = "warn"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
reloopy-ipc = { path = "crates/ipc" }
passfd = "0.1.6"
libc = "0.2"
