[package]
name = "reloopy-admin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reloopy-admin"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reloopy-ipc = { workspace = true }
