[package]
name = "loopy-boot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loopy-boot"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
loopy-ipc = { workspace = true }
