[package]
name = "reloopy-boot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reloopy-boot"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reloopy-ipc = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
