[package]
name = "reloopy-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reloopy"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
reloopy-ipc = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
