[package]
name = "reloopy-peripheral"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reloopy-peripheral"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true }
reloopy-ipc = { workspace = true }
ignore = "0.4"
similar = "2"
regex = "1"
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
