[package]
name = "reloopy-admin-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reloopy-admin-web"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true }
reloopy-ipc = { workspace = true }
