[package]
name = "loopy-compiler"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loopy-compiler"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
loopy-ipc = { workspace = true }
