[package]
name = "reloopy-compiler"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reloopy-compiler"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reloopy-ipc = { workspace = true }
