[package]
name = "reloopy-judge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reloopy-judge"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reloopy-ipc = { workspace = true }
